Fix alignment

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -571,11 +571,16 @@ nav
       font-size: 18px
     .val-group
       border: 0
+      margin-top: 15px
+      margin-bottom: 0
       td
         padding: 0
         &:nth-child(1)
           padding-right: 8px
           border-right: 1px solid $accent
+          width: 41%
+          height: 65px
+          // find a better way to do this ^
         &:nth-child(2)
           padding-left: 3px
       h2
